# credence_depreciated

./: .env  .env.example  .gitignore  Dockerfile  README.md  alembic.ini  docker-compose.yml  pyproject.toml
alembic/: env.py  script.py.mako
alembic/versions/: 0001_initial.py  0002_disputes.py  0003_append_only_ledger.py  0004_trust_and_meta.py
config/: config.example.yaml
credence/: cache.py  config.py  db.py  deps.py  rate_limit.py  schemas.py  worker.py
credence/api/: main.py
credence/api/routers/: balances.py  disputes.py  karma.py  leaderboard.py  ledger.py  stats.py  trust.py  verification.py
credence/auth_providers/: jwt_auth.py  no_auth.py
credence/plugins/: __init__.py  protocols.py
credence/plugins/decay_plugins/: default.py
credence/plugins/evidence_plugins/: default.py
credence/plugins/leaderboard_plugins/: default.py
credence/plugins/trust/formulas/: default.py
credence/plugins/verification_plugins/: default.py
credence/services/: __init__.py  disputes.py  karma.py  trust.py  verification.py
docker/: entrypoint.py
